hphp/test/zend/bad/ext/dom/tests/DOMDocument_loadHTMLfile_error1.php
<?php
$doc = new DOMDocument();
$result = $doc->loadHTMLFile(dirname(__FILE__) . "/ffff/test.html");
assert('$result === false');
?>
